js number guess complete

--- a/js Basic/2 A First Splash into javascript/guess number game/index.css
+++ b/js Basic/2 A First Splash into javascript/guess number game/index.css
@@ -4,49 +4,27 @@
 	scroll-behavior: smooth;
 }
 
-.parent {
-
-	padding: 2rem;
-	background-color: #11ffaa75;
-
+.resultParas {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-
-	height: 100vh;
-
-
 }
 
-.input-child {
+.resultParas-item {
+	padding: 2%;
+}
 
+.input-section {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	margin: 2rem;
-	width: 100%;
-
-
+	padding: 5%;
 }
 
-label {
-	font-size: 36px;
-	width: 250px;
+.input-section-item {
+	display: flex;
+	align-items: center;
+	margin: 2%;
+	padding: 2%;
 
-}
-
-input {
-	padding: 0.5rem;
-	width: 20%;
-
-	margin: 2rem;
-}
-
-button {
-	width: 20%;
-	padding: 1rem;
-
-	box-shadow: 0.5rem 1rem 0.5rem 1rem #11ddaaff;
 }
